<resources>
    <string name="app_name">CheckBox</string>
    <string name="question">Who is your favorite person ?</string>
    <string name="mom">Mom</string>
    <string name="dad">Dad</string>
    <string name="brother">Brother</string>
    <string name="button_name">Click</string>
    <string name="ad_button_name">Show Alert Dialog</string>
    <string name="title">Alert Dialog</string>
    <string name="message_name">Are you sure ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
