<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gouda.vivek.checkbox.MainActivity">

    <CheckBox
        android:text="@string/mom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ mom_cb"
        android:layout_below="@+id/questionTV"
        android:layout_alignLeft="@+id/questionTV"
        android:layout_alignStart="@+id/questionTV"
        android:layout_marginTop="47dp" />

    <CheckBox
        android:text="@string/dad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ mom_cb"
        android:layout_alignStart="@+id/ mom_cb"
        android:id="@+id/dad_cb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/bro_cb"
        android:layout_alignStart="@+id/bro_cb"
        android:layout_marginBottom="15dp"
        android:id="@+id/answerTV" />

    <TextView
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:id="@+id/questionTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:text="@string/button_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClick"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/bro_cb"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/brother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/bro_cb"
        android:layout_below="@+id/dad_cb"
        android:layout_alignLeft="@+id/dad_cb"
        android:layout_alignStart="@+id/dad_cb" />

    <Button
        android:text="@string/ad_button_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/adButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ mom_cb"
        android:layout_toEndOf="@+id/ mom_cb" />
</RelativeLayout>
